@@ -1,3 +1,7 @@
+2012-04-20 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	* mpz/setbit.c: Simplify.
+
 2012-04-19  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpz/Makefile.am (check_PROGRAMS): Add t-remove.
